--- a/shopping/index.css
+++ b/shopping/index.css
@@ -109,3 +109,10 @@ ul li:hover {
     background-color: #FFECC7;
     cursor: pointer;
 }
+
+.purchased {
+    background-color: #B2D8B2; /* Change color to indicate purchased items */
+    color: #004400; /* Change text color */
+    text-decoration: line-through; /* Add strikethrough for a visual cue */
+}
+
